# simple-modeler

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: constants.h  shaders.h
app/src/: main.c
common/: CMakeLists.txt
common/include/: allocator.h  defines.h  input.h  memory.h
common/src/: allocator.c  assert.c  input.c  memory.c
graphics/: CMakeLists.txt
graphics/include/: font.h  graphics.h  material.h  mesh.h  shader.h  texture.h  ui.h  window.h
graphics/include/styles/: catppuccin_latte.h  dark.h  dracula.h  light.h  style.h
graphics/src/: font.c  graphics.c  mesh.c  shader.c  texture.c  ui.c  window.c
graphics/src/shaders/: ui.h
